consistently close short-lived HTTPClient instances