@@ -267,17 +267,19 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     do {
       queryParams.put("pageToken", pageToken);
       AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      ListTablesResponse response =
-          client
-              .withAuthSession(contextualSession)
-              .get(
-                  paths.tables(ns),
-                  queryParams,
-                  ListTablesResponse.class,
-                  Map.of(),
-                  ErrorHandlers.namespaceErrorHandler());
-      pageToken = response.nextPageToken();
-      tables.addAll(response.identifiers());
+      try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+        ListTablesResponse response =
+            contextualClient.get(
+                paths.tables(ns),
+                queryParams,
+                ListTablesResponse.class,
+                Map.of(),
+                ErrorHandlers.namespaceErrorHandler());
+        pageToken = response.nextPageToken();
+        tables.addAll(response.identifiers());
+      } catch (IOException e) {
+        throw new UncheckedIOException(e);
+      }
     } while (pageToken != null);
 
     return tables.build();
@@ -288,12 +290,13 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     Endpoint.check(endpoints, Endpoint.V1_DELETE_TABLE);
     checkIdentifierIsValid(identifier);
 
-    try {
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      client
-          .withAuthSession(contextualSession)
-          .delete(paths.table(identifier), null, Map.of(), ErrorHandlers.tableErrorHandler());
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+    try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+      contextualClient.delete(
+          paths.table(identifier), null, Map.of(), ErrorHandlers.tableErrorHandler());
       return true;
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
     } catch (NoSuchTableException e) {
       return false;
     }
@@ -304,17 +307,17 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     Endpoint.check(endpoints, Endpoint.V1_DELETE_TABLE);
     checkIdentifierIsValid(identifier);
 
-    try {
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      client
-          .withAuthSession(contextualSession)
-          .delete(
-              paths.table(identifier),
-              ImmutableMap.of("purgeRequested", "true"),
-              null,
-              Map.of(),
-              ErrorHandlers.tableErrorHandler());
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+    try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+      contextualClient.delete(
+          paths.table(identifier),
+          ImmutableMap.of("purgeRequested", "true"),
+          null,
+          Map.of(),
+          ErrorHandlers.tableErrorHandler());
       return true;
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
     } catch (NoSuchTableException e) {
       return false;
     }
@@ -331,9 +334,12 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     // for now, ignore the response because there is no way to return it
     AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    client
-        .withAuthSession(contextualSession)
-        .post(paths.rename(), request, null, Map.of(), ErrorHandlers.tableErrorHandler());
+    try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+      contextualClient.post(
+          paths.rename(), request, null, Map.of(), ErrorHandlers.tableErrorHandler());
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
   }
 
   @Override
@@ -342,10 +348,13 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       checkIdentifierIsValid(identifier);
       if (endpoints.contains(Endpoint.V1_TABLE_EXISTS)) {
         AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-        client
-            .withAuthSession(contextualSession)
-            .head(paths.table(identifier), Map.of(), ErrorHandlers.tableErrorHandler());
-        return true;
+        try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+          contextualClient.head(
+              paths.table(identifier), Map.of(), ErrorHandlers.tableErrorHandler());
+          return true;
+        } catch (IOException e) {
+          throw new UncheckedIOException(e);
+        }
       } else {
         // fallback in order to work with 1.7.x and older servers
         return super.tableExists(context, identifier);
@@ -359,14 +368,16 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       SessionContext context, TableIdentifier identifier, SnapshotMode mode) {
     Endpoint.check(endpoints, Endpoint.V1_LOAD_TABLE);
     AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    return client
-        .withAuthSession(contextualSession)
-        .get(
-            paths.table(identifier),
-            mode.params(),
-            LoadTableResponse.class,
-            Map.of(),
-            ErrorHandlers.tableErrorHandler());
+    try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+      return contextualClient.get(
+          paths.table(identifier),
+          mode.params(),
+          LoadTableResponse.class,
+          Map.of(),
+          ErrorHandlers.tableErrorHandler());
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
   }
 
   @Override
@@ -430,28 +441,31 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       tableMetadata = response.tableMetadata();
     }
 
-    RESTClient tableClient = client.withAuthSession(tableSession);
-    RESTTableOperations ops =
-        new RESTTableOperations(
-            tableClient,
-            paths.table(finalIdentifier),
-            Map::of,
-            tableFileIO(context, response.config()),
-            tableMetadata,
-            endpoints);
+    try (RESTClient tableClient = client.withAuthSession(tableSession)) {
+      RESTTableOperations ops =
+          new RESTTableOperations(
+              tableClient,
+              paths.table(finalIdentifier),
+              Map::of,
+              tableFileIO(context, response.config()),
+              tableMetadata,
+              endpoints);
 
-    trackFileIO(ops);
+      trackFileIO(ops);
 
-    BaseTable table =
-        new BaseTable(
-            ops,
-            fullTableName(finalIdentifier),
-            metricsReporter(paths.metrics(finalIdentifier), tableClient));
-    if (metadataType != null) {
-      return MetadataTableUtils.createMetadataTableInstance(table, metadataType);
+      BaseTable table =
+          new BaseTable(
+              ops,
+              fullTableName(finalIdentifier),
+              metricsReporter(paths.metrics(finalIdentifier), tableClient));
+      if (metadataType != null) {
+        return MetadataTableUtils.createMetadataTableInstance(table, metadataType);
+      }
+
+      return table;
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
     }
-
-    return table;
   }
 
   private void trackFileIO(RESTTableOperations ops) {
@@ -497,32 +511,35 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
             .build();
 
     AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    LoadTableResponse response =
-        client
-            .withAuthSession(contextualSession)
-            .post(
-                paths.register(ident.namespace()),
-                request,
-                LoadTableResponse.class,
-                Map.of(),
-                ErrorHandlers.tableErrorHandler());
+    try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+      LoadTableResponse response =
+          contextualClient.post(
+              paths.register(ident.namespace()),
+              request,
+              LoadTableResponse.class,
+              Map.of(),
+              ErrorHandlers.tableErrorHandler());
 
-    Map<String, String> tableConf = response.config();
-    AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
-    RESTClient tableClient = client.withAuthSession(tableSession);
-    RESTTableOperations ops =
-        new RESTTableOperations(
-            tableClient,
-            paths.table(ident),
-            Map::of,
-            tableFileIO(context, response.config()),
-            response.tableMetadata(),
-            endpoints);
+      Map<String, String> tableConf = response.config();
+      AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
+      try (RESTClient tableClient = client.withAuthSession(tableSession)) {
+        RESTTableOperations ops =
+            new RESTTableOperations(
+                tableClient,
+                paths.table(ident),
+                Map::of,
+                tableFileIO(context, response.config()),
+                response.tableMetadata(),
+                endpoints);
 
-    trackFileIO(ops);
+        trackFileIO(ops);
 
-    return new BaseTable(
-        ops, fullTableName(ident), metricsReporter(paths.metrics(ident), tableClient));
+        return new BaseTable(
+            ops, fullTableName(ident), metricsReporter(paths.metrics(ident), tableClient));
+      }
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
   }
 
   @Override
@@ -534,14 +551,16 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     // for now, ignore the response because there is no way to return it
     AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    client
-        .withAuthSession(contextualSession)
-        .post(
-            paths.namespaces(),
-            request,
-            CreateNamespaceResponse.class,
-            Map.of(),
-            ErrorHandlers.namespaceErrorHandler());
+    try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+      contextualClient.post(
+          paths.namespaces(),
+          request,
+          CreateNamespaceResponse.class,
+          Map.of(),
+          ErrorHandlers.namespaceErrorHandler());
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
   }
 
   @Override
@@ -564,17 +583,19 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     do {
       queryParams.put("pageToken", pageToken);
       AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      ListNamespacesResponse response =
-          client
-              .withAuthSession(contextualSession)
-              .get(
-                  paths.namespaces(),
-                  queryParams,
-                  ListNamespacesResponse.class,
-                  Map.of(),
-                  ErrorHandlers.namespaceErrorHandler());
-      pageToken = response.nextPageToken();
-      namespaces.addAll(response.namespaces());
+      try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+        ListNamespacesResponse response =
+            contextualClient.get(
+                paths.namespaces(),
+                queryParams,
+                ListNamespacesResponse.class,
+                Map.of(),
+                ErrorHandlers.namespaceErrorHandler());
+        pageToken = response.nextPageToken();
+        namespaces.addAll(response.namespaces());
+      } catch (IOException e) {
+        throw new UncheckedIOException(e);
+      }
     } while (pageToken != null);
 
     return namespaces.build();
@@ -586,10 +607,13 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       checkNamespaceIsValid(namespace);
       if (endpoints.contains(Endpoint.V1_NAMESPACE_EXISTS)) {
         AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-        client
-            .withAuthSession(contextualSession)
-            .head(paths.namespace(namespace), Map.of(), ErrorHandlers.namespaceErrorHandler());
-        return true;
+        try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+          contextualClient.head(
+              paths.namespace(namespace), Map.of(), ErrorHandlers.namespaceErrorHandler());
+          return true;
+        } catch (IOException e) {
+          throw new UncheckedIOException(e);
+        }
       } else {
         // fallback in order to work with 1.7.x and older servers
         return super.namespaceExists(context, namespace);
@@ -606,15 +630,17 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     // TODO: rename to LoadNamespaceResponse?
     AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    GetNamespaceResponse response =
-        client
-            .withAuthSession(contextualSession)
-            .get(
-                paths.namespace(ns),
-                GetNamespaceResponse.class,
-                Map.of(),
-                ErrorHandlers.namespaceErrorHandler());
-    return response.properties();
+    try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+      GetNamespaceResponse response =
+          contextualClient.get(
+              paths.namespace(ns),
+              GetNamespaceResponse.class,
+              Map.of(),
+              ErrorHandlers.namespaceErrorHandler());
+      return response.properties();
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
   }
 
   @Override
@@ -622,12 +648,13 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     Endpoint.check(endpoints, Endpoint.V1_DELETE_NAMESPACE);
     checkNamespaceIsValid(ns);
 
-    try {
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      client
-          .withAuthSession(contextualSession)
-          .delete(paths.namespace(ns), null, Map.of(), ErrorHandlers.dropNamespaceErrorHandler());
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+    try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+      contextualClient.delete(
+          paths.namespace(ns), null, Map.of(), ErrorHandlers.dropNamespaceErrorHandler());
       return true;
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
     } catch (NoSuchNamespaceException e) {
       return false;
     }
@@ -643,17 +670,18 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         UpdateNamespacePropertiesRequest.builder().updateAll(updates).removeAll(removals).build();
 
     AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    UpdateNamespacePropertiesResponse response =
-        client
-            .withAuthSession(contextualSession)
-            .post(
-                paths.namespaceProperties(ns),
-                request,
-                UpdateNamespacePropertiesResponse.class,
-                Map.of(),
-                ErrorHandlers.namespaceErrorHandler());
-
-    return !response.updated().isEmpty();
+    try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+      UpdateNamespacePropertiesResponse response =
+          contextualClient.post(
+              paths.namespaceProperties(ns),
+              request,
+              UpdateNamespacePropertiesResponse.class,
+              Map.of(),
+              ErrorHandlers.namespaceErrorHandler());
+      return !response.updated().isEmpty();
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
   }
 
   @Override
@@ -756,32 +784,36 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .build();
 
       AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      LoadTableResponse response =
-          client
-              .withAuthSession(contextualSession)
-              .post(
-                  paths.tables(ident.namespace()),
-                  request,
-                  LoadTableResponse.class,
-                  Map.of(),
-                  ErrorHandlers.tableErrorHandler());
+      try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
 
-      Map<String, String> tableConf = response.config();
-      AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
-      RESTClient tableClient = client.withAuthSession(tableSession);
-      RESTTableOperations ops =
-          new RESTTableOperations(
-              tableClient,
-              paths.table(ident),
-              Map::of,
-              tableFileIO(context, response.config()),
-              response.tableMetadata(),
-              endpoints);
+        LoadTableResponse response =
+            contextualClient.post(
+                paths.tables(ident.namespace()),
+                request,
+                LoadTableResponse.class,
+                Map.of(),
+                ErrorHandlers.tableErrorHandler());
+        Map<String, String> tableConf = response.config();
 
-      trackFileIO(ops);
+        AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
+        try (RESTClient tableClient = client.withAuthSession(tableSession)) {
+          RESTTableOperations ops =
+              new RESTTableOperations(
+                  tableClient,
+                  paths.table(ident),
+                  Map::of,
+                  tableFileIO(context, response.config()),
+                  response.tableMetadata(),
+                  endpoints);
 
-      return new BaseTable(
-          ops, fullTableName(ident), metricsReporter(paths.metrics(ident), tableClient));
+          trackFileIO(ops);
+
+          return new BaseTable(
+              ops, fullTableName(ident), metricsReporter(paths.metrics(ident), tableClient));
+        }
+      } catch (IOException e) {
+        throw new UncheckedIOException(e);
+      }
     }
 
     @Override
@@ -795,22 +827,25 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
       TableMetadata meta = response.tableMetadata();
 
-      RESTClient tableClient = client.withAuthSession(tableSession);
-      RESTTableOperations ops =
-          new RESTTableOperations(
-              tableClient,
-              paths.table(ident),
-              Map::of,
-              tableFileIO(context, response.config()),
-              RESTTableOperations.UpdateType.CREATE,
-              createChanges(meta),
-              meta,
-              endpoints);
+      try (RESTClient tableClient = client.withAuthSession(tableSession)) {
+        RESTTableOperations ops =
+            new RESTTableOperations(
+                tableClient,
+                paths.table(ident),
+                Map::of,
+                tableFileIO(context, response.config()),
+                RESTTableOperations.UpdateType.CREATE,
+                createChanges(meta),
+                meta,
+                endpoints);
 
-      trackFileIO(ops);
+        trackFileIO(ops);
 
-      return Transactions.createTableTransaction(
-          fullName, ops, meta, metricsReporter(paths.metrics(ident), tableClient));
+        return Transactions.createTableTransaction(
+            fullName, ops, meta, metricsReporter(paths.metrics(ident), tableClient));
+      } catch (IOException e) {
+        throw new UncheckedIOException(e);
+      }
     }
 
     @Override
@@ -858,22 +893,25 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         changes.add(new MetadataUpdate.SetDefaultSortOrder(replacement.defaultSortOrderId()));
       }
 
-      RESTClient tableClient = client.withAuthSession(tableSession);
-      RESTTableOperations ops =
-          new RESTTableOperations(
-              tableClient,
-              paths.table(ident),
-              Map::of,
-              tableFileIO(context, response.config()),
-              RESTTableOperations.UpdateType.REPLACE,
-              changes.build(),
-              base,
-              endpoints);
+      try (RESTClient tableClient = client.withAuthSession(tableSession)) {
+        RESTTableOperations ops =
+            new RESTTableOperations(
+                tableClient,
+                paths.table(ident),
+                Map::of,
+                tableFileIO(context, response.config()),
+                RESTTableOperations.UpdateType.REPLACE,
+                changes.build(),
+                base,
+                endpoints);
 
-      trackFileIO(ops);
+        trackFileIO(ops);
 
-      return Transactions.replaceTableTransaction(
-          fullName, ops, replacement, metricsReporter(paths.metrics(ident), tableClient));
+        return Transactions.replaceTableTransaction(
+            fullName, ops, replacement, metricsReporter(paths.metrics(ident), tableClient));
+      } catch (IOException e) {
+        throw new UncheckedIOException(e);
+      }
     }
 
     @Override
@@ -907,14 +945,16 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .build();
 
       AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      return client
-          .withAuthSession(contextualSession)
-          .post(
-              paths.tables(ident.namespace()),
-              request,
-              LoadTableResponse.class,
-              Map.of(),
-              ErrorHandlers.tableErrorHandler());
+      try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+        return contextualClient.post(
+            paths.tables(ident.namespace()),
+            request,
+            LoadTableResponse.class,
+            Map.of(),
+            ErrorHandlers.tableErrorHandler());
+      } catch (IOException e) {
+        throw new UncheckedIOException(e);
+      }
     }
   }
 
@@ -994,17 +1034,19 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
           properties.get(CatalogProperties.WAREHOUSE_LOCATION));
     }
 
-    ConfigResponse configResponse =
-        client
-            .withAuthSession(initialAuth)
-            .get(
-                ResourcePaths.config(),
-                queryParams.build(),
-                ConfigResponse.class,
-                configHeaders(properties),
-                ErrorHandlers.defaultErrorHandler());
-    configResponse.validate();
-    return configResponse;
+    try (RESTClient initialClient = client.withAuthSession(initialAuth)) {
+      ConfigResponse configResponse =
+          initialClient.get(
+              ResourcePaths.config(),
+              queryParams.build(),
+              ConfigResponse.class,
+              configHeaders(properties),
+              ErrorHandlers.defaultErrorHandler());
+      configResponse.validate();
+      return configResponse;
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
   }
 
   private void checkIdentifierIsValid(TableIdentifier tableIdentifier) {
@@ -1039,14 +1081,16 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
 
     AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    client
-        .withAuthSession(contextualSession)
-        .post(
-            paths.commitTransaction(),
-            new CommitTransactionRequest(tableChanges),
-            null,
-            Map.of(),
-            ErrorHandlers.tableCommitHandler());
+    try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+      contextualClient.post(
+          paths.commitTransaction(),
+          new CommitTransactionRequest(tableChanges),
+          null,
+          Map.of(),
+          ErrorHandlers.tableCommitHandler());
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
   }
 
   @Override
@@ -1066,17 +1110,19 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     do {
       queryParams.put("pageToken", pageToken);
       AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      ListTablesResponse response =
-          client
-              .withAuthSession(contextualSession)
-              .get(
-                  paths.views(namespace),
-                  queryParams,
-                  ListTablesResponse.class,
-                  Map.of(),
-                  ErrorHandlers.namespaceErrorHandler());
-      pageToken = response.nextPageToken();
-      views.addAll(response.identifiers());
+      try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+        ListTablesResponse response =
+            contextualClient.get(
+                paths.views(namespace),
+                queryParams,
+                ListTablesResponse.class,
+                Map.of(),
+                ErrorHandlers.namespaceErrorHandler());
+        pageToken = response.nextPageToken();
+        views.addAll(response.identifiers());
+      } catch (IOException e) {
+        throw new UncheckedIOException(e);
+      }
     } while (pageToken != null);
 
     return views.build();
@@ -1088,9 +1134,11 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       checkViewIdentifierIsValid(identifier);
       if (endpoints.contains(Endpoint.V1_VIEW_EXISTS)) {
         AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-        client
-            .withAuthSession(contextualSession)
-            .head(paths.view(identifier), Map.of(), ErrorHandlers.viewErrorHandler());
+        try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+          contextualClient.head(paths.view(identifier), Map.of(), ErrorHandlers.viewErrorHandler());
+        } catch (IOException e) {
+          throw new UncheckedIOException(e);
+        }
         return true;
       } else {
         // fallback in order to work with 1.7.x and older servers
@@ -1114,28 +1162,28 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkViewIdentifierIsValid(identifier);
 
     AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    LoadViewResponse response =
-        client
-            .withAuthSession(contextualSession)
-            .get(
-                paths.view(identifier),
-                LoadViewResponse.class,
-                Map.of(),
-                ErrorHandlers.viewErrorHandler());
+    try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+      LoadViewResponse response =
+          contextualClient.get(
+              paths.view(identifier),
+              LoadViewResponse.class,
+              Map.of(),
+              ErrorHandlers.viewErrorHandler());
 
-    Map<String, String> tableConf = response.config();
-    AuthSession tableSession = authManager.tableSession(identifier, tableConf, contextualSession);
-    ViewMetadata metadata = response.metadata();
+      Map<String, String> tableConf = response.config();
+      ViewMetadata metadata = response.metadata();
 
-    RESTViewOperations ops =
-        new RESTViewOperations(
-            client.withAuthSession(tableSession),
-            paths.view(identifier),
-            Map::of,
-            metadata,
-            endpoints);
+      AuthSession tableSession = authManager.tableSession(identifier, tableConf, contextualSession);
+      try (RESTClient tableClient = client.withAuthSession(tableSession)) {
+        RESTViewOperations ops =
+            new RESTViewOperations(
+                tableClient, paths.view(identifier), Map::of, metadata, endpoints);
 
-    return new BaseView(ops, ViewUtil.fullViewName(name(), identifier));
+        return new BaseView(ops, ViewUtil.fullViewName(name(), identifier));
+      }
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
   }
 
   @Override
@@ -1148,12 +1196,13 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     Endpoint.check(endpoints, Endpoint.V1_DELETE_VIEW);
     checkViewIdentifierIsValid(identifier);
 
-    try {
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      client
-          .withAuthSession(contextualSession)
-          .delete(paths.view(identifier), null, Map.of(), ErrorHandlers.viewErrorHandler());
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+    try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+      contextualClient.delete(
+          paths.view(identifier), null, Map.of(), ErrorHandlers.viewErrorHandler());
       return true;
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
     } catch (NoSuchViewException e) {
       return false;
     }
@@ -1169,9 +1218,12 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         RenameTableRequest.builder().withSource(from).withDestination(to).build();
 
     AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    client
-        .withAuthSession(contextualSession)
-        .post(paths.renameView(), request, null, Map.of(), ErrorHandlers.viewErrorHandler());
+    try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+      contextualClient.post(
+          paths.renameView(), request, null, Map.of(), ErrorHandlers.viewErrorHandler());
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
   }
 
   private class RESTViewBuilder implements ViewBuilder {
@@ -1294,27 +1346,29 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .build();
 
       AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      LoadViewResponse response =
-          client
-              .withAuthSession(contextualSession)
-              .post(
-                  paths.views(identifier.namespace()),
-                  request,
-                  LoadViewResponse.class,
-                  Map.of(),
-                  ErrorHandlers.viewErrorHandler());
+      try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+        LoadViewResponse response =
+            contextualClient.post(
+                paths.views(identifier.namespace()),
+                request,
+                LoadViewResponse.class,
+                Map.of(),
+                ErrorHandlers.viewErrorHandler());
 
-      Map<String, String> tableConf = response.config();
-      AuthSession tableSession = authManager.tableSession(identifier, tableConf, contextualSession);
-      RESTViewOperations ops =
-          new RESTViewOperations(
-              client.withAuthSession(tableSession),
-              paths.view(identifier),
-              Map::of,
-              response.metadata(),
-              endpoints);
+        Map<String, String> tableConf = response.config();
 
-      return new BaseView(ops, ViewUtil.fullViewName(name(), identifier));
+        AuthSession tableSession =
+            authManager.tableSession(identifier, tableConf, contextualSession);
+        try (RESTClient tableClient = client.withAuthSession(tableSession)) {
+          RESTViewOperations ops =
+              new RESTViewOperations(
+                  tableClient, paths.view(identifier), Map::of, response.metadata(), endpoints);
+
+          return new BaseView(ops, ViewUtil.fullViewName(name(), identifier));
+        }
+      } catch (IOException e) {
+        throw new UncheckedIOException(e);
+      }
     }
 
     @Override
@@ -1345,13 +1399,15 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
                   name(), identifier, Endpoint.V1_LOAD_VIEW));
 
       AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      return client
-          .withAuthSession(contextualSession)
-          .get(
-              paths.view(identifier),
-              LoadViewResponse.class,
-              Map.of(),
-              ErrorHandlers.viewErrorHandler());
+      try (RESTClient contextualClient = client.withAuthSession(contextualSession)) {
+        return contextualClient.get(
+            paths.view(identifier),
+            LoadViewResponse.class,
+            Map.of(),
+            ErrorHandlers.viewErrorHandler());
+      } catch (IOException e) {
+        throw new UncheckedIOException(e);
+      }
     }
 
     private View replace(LoadViewResponse response) {
@@ -1397,17 +1453,17 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       Map<String, String> tableConf = response.config();
       AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
       AuthSession tableSession = authManager.tableSession(identifier, tableConf, contextualSession);
-      RESTViewOperations ops =
-          new RESTViewOperations(
-              client.withAuthSession(tableSession),
-              paths.view(identifier),
-              Map::of,
-              metadata,
-              endpoints);
+      try (RESTClient tableClient = client.withAuthSession(tableSession)) {
+        RESTViewOperations ops =
+            new RESTViewOperations(
+                tableClient, paths.view(identifier), Map::of, metadata, endpoints);
 
-      ops.commit(metadata, replacement);
+        ops.commit(metadata, replacement);
 
-      return new BaseView(ops, ViewUtil.fullViewName(name(), identifier));
+        return new BaseView(ops, ViewUtil.fullViewName(name(), identifier));
+      } catch (IOException e) {
+        throw new UncheckedIOException(e);
+      }
     }
   }
 }
